--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "apollo-server-express": "^2.3.1",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "graphql": "^14.1.1",
     "http": "0.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "body-parser": "^1.19.0",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -31,6 +35,7 @@
     "@babel/preset-env": "^7.2.3",
     "babel-plugin-root-import": "^6.1.0",
     "nodemon": "^1.18.9",
-    "standardjs": "^1.0.0-alpha"
+    "standardjs": "^1.0.0-alpha",
+    "sequelize-cli": "^5.5.1"
   }
 }
