--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.3.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "graphql": "^14.1.1",
     "http": "0.0.0",
     "lodash": "^4.17.15",
-    "body-parser": "^1.19.0",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.10"
+    "sequelize": "^5.21.10",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
