--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#ecf56a",
-    "activityBar.foreground": "#000"
+    "activityBar.background": "#000",
+    "activityBar.foreground": "#f76142"
   }
 }
