--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.10",
